# sugar

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
sugar/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
sugar/finance/: apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
sugar/finance/migrations/: 0001_initial.py  0002_transaction_finance_tra_wallet__1163cb_idx_and_more.py
